# stonks-overwatch

./: .flake8  .gitignore  .pre-commit-config.yaml  .secrets.example  AGENTS.md  ARCHITECTURE_IMPROVEMENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONFIGURATION_CACHING_STRATEGY.md  CONTRIBUTING.md  Dockerfile  LICENSE  MODULE_RESTRUCTURING_COMPLETE.md  Makefile  PHASE_2_IMPLEMENTATION_COMPLETE.md  PHASE_3_IMPLEMENTATION_COMPLETE.md  PHASE_4_IMPLEMENTATION_COMPLETE.md  PROPOSED_MODULE_STRUCTURE.md  README.md  THIRD_PARTY_LICENSES.txt  UNIFIED_BROKER_ARCHITECTURE.md  com.caribay.stonks-overwatch.metainfo.xml  dashboard.html  docker-compose.yml  instructions.md  lychee.toml  package-lock.json  package.json  pyproject.toml  requirements.txt
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  TEMPLATES_README.md  copilot-instructions.md  dependabot.yml  instructions.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  question.md
.github/actions/: install-env.yml
.github/actions/common-action/: action.yml
.github/scripts/: briefcase-wrapper.py  build-deb.sh  build-rpm.sh  changelog-to-releases.py  deb-postinst.sh  prepare-package.sh  stonks-overwatch.metainfo.xml  update_precommit_hooks.sh
.github/workflows/: cicd.yml  lint.yml  npm-validate.yml  package.yml  precommit-autoupdate.yml  snapshot-release.yml  test.yml  wiki.yml
app/degiro/models/: portfolio.py
app/stocks_portfolio/: wsgi.py
config/: config.json.template
degiro/: apps.py  urls.py
degiro/models/: portfolio.py
degiro/templates/: base.html  dashboard.html  portfolio.html  transactions.html  user.html
degiro/templatetags/: custom_tags.py
degiro/utils/: degiro.py  single_instance_metaclass.py
degiro/views/: account.py  dashboard.py  portfolio.py  transactions.py  user.py
docs/: ARCHITECTURE.md  ARCHITECTURE_AUTHENTICATION.md  ARCHITECTURE_BROKERS.md  ARCHITECTURE_IMPROVEMENTS.md  AUTHENTICATION_MAINTENANCE.md  Alpaca.md  Application.md  Architecture-Improvements.md  BROKER_ARCHITECTURE.md  Bitvavo.md  Configuration-Integration.md  DEGIRO.md  DEGIRO_AUTH_ARCHITECTURE.md  Developing-Stonks-Overwatch.md  FAQ.md  Home.md  IBKR.md  MetaTrader4.md  OPERATIONS_AUTHENTICATION.md  PENDING_TASKS.md  PLUGIN_ARCHITECTURE.md  PLUGIN_ARCHITECTURE_PLAN.md  PLUGIN_IMPLEMENTATION_ROADMAP.md  Quickstart.md  UNIFIED_BROKER_ARCHITECTURE.md  User-Interface.md  _Sidebar.md
portfolio-performance/: README.md  deGiroAnalysis.py  deGiroConverterAccount.py  deGiroConverterTrans.py  util.py
scripts/: account_info.py  account_overview.py  account_report.py  agenda_dividends.py  bitvavo.py  check_updates.py  client_details.py  combine_licenses.py  common.py  company_profile.py  dump_db.py  exchanges.py  generate-icons.sh  generate_demo_db.py  generate_docs_broker_icons.sh  generate_licenses.py  init_db.py  obfuscate.sh  portfolio.py  portfolio_example.py  products_config.py  products_info.py  quotecast.py  total_portfolio.py  transaction_history.py  transactions.py  y_finance.py
scripts/bitvavo/: bitvavo.py
scripts/degiro/: account_info.py  account_overview.py  account_report.py  agenda_dividends.py  client_details.py  common.py  company_profile.py  portfolio.py  portfolio_example.py  products_config.py  products_info.py  quotecast.py  total_portfolio.py  transaction_history.py  transactions.py  upcoming_payments.py
scripts/ibkr/: ibkr.py  ibkr_dh_prime.py
scripts/mt4/: mt4.py
scripts/portfolio-performance/: README.md  deGiroAnalysis.py  deGiroConverterAccount.py  deGiroConverterTrans.py  util.py
scripts/quotecast/: chart.py  realtime_one_shot.py  realtime_poller.py
scripts/yfinance/: y_finance.py
src/: app.py  asgi.py  init.sh  manage.py  package-lock.json  package.json  settings.py  urls.py  wsgi.py
src/degiro/: apps.py  models.py  urls.py
src/degiro/config/: degiro_config.py
src/degiro/data/: account_overview.py  deposits.py  dividends.py  fees.py  portfolio.py  transactions.py
src/degiro/integration/: account_overview.py  portfolio.py  transactions.py  user.py
src/degiro/jobs/: jobs_scheduler.py
src/degiro/middleware/: auth.py
src/degiro/migrations/: 0001_initial.py  0002_transactions.py  0003_productinfo.py  0004_productquotation.py  0005_companyprofile.py
src/degiro/models/: account_overview.py  portfolio.py  transactions.py  user.py
src/degiro/repositories/: cash_movements_repository.py  company_profile_repository.py  product_info_repository.py  product_quotations_repository.py  transactions_repository.py
src/degiro/services/: account_overview.py  currency_converter_service.py  degiro_service.py  deposits.py  dividends.py  fees.py  portfolio.py  transactions.py  update_service.py
src/degiro/templates/: account_overview.html  base.html  dashboard.html  deposits.html  diversification.html  dividends.html  fees.html  login.html  portfolio.html  portfolio_table.html  total_overview.html  transactions.html  user.html
src/degiro/templatetags/: custom_tags.py
src/degiro/utils/: constants.py  datetime.py  db_utils.py  degiro.py  localization.py  single_instance_metaclass.py
src/degiro/views/: account_overview.py  dashboard.py  deposits.py  diversification.py  dividends.py  fees.py  login.py  portfolio.py  transactions.py  user.py
src/icons/: stonks_overwatch.icns
src/scripts/: account_import.py  account_report.py  commons.py  company_profile_import.py  generate-icons.sh  init_db.py  products_info_import.py  transactions_import.py  transactions_report.py
src/static/: style.css
src/stocks_portfolio/: __init__.py  asgi.py  settings.py  urls.py  wsgi.py
src/stonks_overwatch/: __main__.py  app.py  app_config.py  apps.py  asgi.py  build_config.py  config.py  context_processors.py  models.py  settings.py  urls.py  wsgi.py
static/: chromaticColors.js  style.css
stocks_portfolio/: asgi.py  settings.py  urls.py
tests/: conftest.py
tests/degiro/: assertions.py  fixtures.py
tests/stonks_overwatch/: assertions.py  base_repository_test.py  fixtures.py  test_config.py  test_context_processors.py  test_settings.py
web/: urls.py  views.py
(+509 files in other folders)
