[tool.poetry]
name = "stonks-overwatch"
version = "0.1.0"
description = "Stonks Overwatch"
authors = ["carlos.tasada <carlos.tasada@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
degiro-connector = "^3.0.23"
django = "^5.1.4"
pycountry = "^24.6.1"
currency-symbols = "^2.0.3"
pandas = "^2.2.3"
requests-cache = "^1.2.1"
django-extensions = "^3.2.3"
python-dateutil = "^2.8.2"
CurrencyConverter = "^0.18.1"
django-node-assets = "^0.9.14"
fontawesomefree = "^6.6.0"
apscheduler = "^3.11.0"
tzlocal = "^5.2"
python-bitvavo-api = "^1.4.2"

[tool.poetry.group.dev.dependencies]
ruff = "^0.6.9"
pytest = "^8.3.4"
pytest-cov = "^5.0.0"
requests-mock = "^1.12.1"
pytest-django = "^4.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

# Same as Black.
line-length = 120
indent-width = 4

# Assume Python 3.8
target-version = "py38"

[tool.ruff.lint]
select = [
    "C",  # pylint convention
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "N",  # PEP8 naming convetions
#    "D",   # pydocstyle
    "W",  # pylint warning
]
ignore = []

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

# Enable auto-formatting of code examples in docstrings. Markdown,
# reStructuredText code/literal blocks and doctests are all supported.
#
# This is currently disabled by default, but it is planned for this
# to be opt-out in the future.
docstring-code-format = false

# Set the line length limit used when formatting code snippets in
# docstrings.
#
# This only has an effect when the `docstring-code-format` setting is
# enabled.
docstring-code-line-length = "dynamic"

[tool.coverage.run]
source = ['src']

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "src.settings"
pythonpath = [".", "src"]
testpaths = ["tests"]
python_files = [
    "test_*.py"
]
addopts = [
    '--import-mode=importlib',
    '--cov-report=html:pytest'
]
