[project]
name = "stonks-overwatch"
version = "0.1.0"
description = "Stonks Overwatch"
authors = [{name = "Carlos Tasada", email = "carlos.tasada@gmail.com"}]
license = "MIT"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "degiro-connector >= 3.0.29",
    "django >= 5.2.3",
    "pycountry >= 24.6.1",
    "currency-symbols >= 2.0.4",
    "pandas >= 2.2.3",
    "requests-cache >= 1.2.1",
    "django-extensions >= 4.1.0",
    "currencyconverter >= 0.18.7",
    "django-node-assets >= 0.9.15",
    "apscheduler >= 3.11.0",
    "tzlocal >= 5.3.1",
    "python-bitvavo-api >= 1.4.3",
    "yfinance >= 0.2.62",
    "iso10383 >=2025.2.10",
    "requests (>=2.32.4,<3.0.0)",
    "fontawesomefree >= 6.6.0",
]

[tool.poetry.dependencies]
python = ">=3.13,<3.14"

[build-system]
requires = ["poetry-core>=2.1.3,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ruff = "^0.11.13"
pytest = "^8.4.0"
pytest-cov = "^6.1.1"
pytest-django = "^4.11.1"
pook = "^2.1.3"
pyinstrument = "^5.0.2"
licensecheck = "^2025.1.0"
pip-licenses = "^5.0.0"
briefcase = "^0.3.23"
deptry = "^0.23.0"

[tool.poetry]
include = [
    { path = "Makefile", format = ["sdist", "wheel"] },
    { path = "package.json", format = ["sdist", "wheel"] },
    { path = "package-lock.json", format = ["sdist", "wheel"] },
    { path = "Dockerfile", format = ["sdist", "wheel"] },
    { path = "docker-compose.yml", format = ["sdist", "wheel"] },
    { path = "config/config.json.template", format = ["sdist", "wheel"] },
    { path = "src/stonks_overwatch/**/*.*", format = ["sdist", "wheel"] },
    { path = "src/icons/**/*.*", format = ["sdist", "wheel"] },
    { path = "src/scripts/**/*.*", format = ["sdist", "wheel"] },
    { path = "src/*.py", format = ["sdist", "wheel"] },
    { path = "src/*.sh", format = ["sdist", "wheel"] },
]

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.9.0"

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

# Same as Black.
line-length = 120
indent-width = 4
target-version = "py313"

[tool.ruff.lint]
select = [
    "C",  # pylint convention
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "N",  # PEP8 naming conventions
    "W",  # pylint warning
]
ignore = []

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.isort]
order-by-type = true
relative-imports-order = "closest-to-furthest"
extra-standard-library = ["typing"]
lines-after-imports = 1
lines-between-types = 0
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder", "testing"]

[tool.ruff.lint.isort.sections]
testing = ["django.test", "pytest", "pook", "unittest"]

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"
# Like Black, indent with spaces, rather than tabs.
indent-style = "space"
# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false
# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

# Enable auto-formatting of code examples in docstrings. Markdown,
# reStructuredText code/literal blocks and doctests are all supported.
#
# This is currently disabled by default, but it is planned for this
# to be opt-out in the future.
docstring-code-format = false

# Set the line length limit used when formatting code snippets in
# docstrings.
#
# This only has an effect when the `docstring-code-format` setting is
# enabled.
docstring-code-line-length = "dynamic"

[tool.coverage.run]
source = ['src/stonks_overwatch']

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "src.stonks_overwatch.settings"
pythonpath = [".", "src/stonks_overwatch", "src"]
testpaths = ["tests"]
python_files = [
    "test_*.py"
]
addopts = [
    '--import-mode=importlib',
    '--cov',
    '--cov-report=term',
    '--cov-report=html:htmlcov'
]

[tool.briefcase]
project_name = "Stonks Overwatch"
bundle = "com.caribay"
url = "https://github.com/ctasada/stonks-overwatch"
license.file = "LICENSE"
author = "Carlos Tasada"
author_email = "ctasada@gmail.com"

[tool.briefcase.app.stonks-overwatch]
formal_name = "Stonks Overwatch"
description = "Stocks Porfolio Tracker"
long_description = """Stonks Overwatch is a new Stocks Dashboard.

Why do we need yet another dashboard? I have been a DeGiro user for many years, and the more active I was,
the more frustrated I became with the lack of any decent dashboard to overview my investments.

After trying different options (I will omit names), I couldn't find any that was really covering my needs, or
that I could trust.

Stonks Overwatch runs locally and doesn't share your data with anyone. Your data is yours
"""
icon = "src/icons/stonks_overwatch"
sources = [
    "src/stonks_overwatch",
    "config/config.json.template"
]
test_sources = [
    "tests",
]
requires = [
    "toga (>=0.5.1,<0.6.0)",
    "std-nslog (>=1.0.3,<2.0.0)",
]
test_requires = [ ]
requirement_installer_args = ["--find-links", "./wheels"]

[tool.briefcase.app.stonks-overwatch.macOS]
universal_build = false

[tool.briefcase.app.stonks-overwatch.linux.flatpak]
flatpak_runtime = "org.freedesktop.Platform"
flatpak_runtime_version = "24.08"
flatpak_sdk = "org.freedesktop.Sdk"

[tool.pip-licenses]
format = "plain-vertical"
with-license-file = true
no-license-path = true
output-file = "THIRD_PARTY_LICENSES.txt"
order = "name"
# Ignore licenses for packages that are not distributed with the project.
# The development dependencies need to be manually maintained.
ignore-packages = [
    "ruff",
    "pytest",
    "pytest-cov",
    "pytest-django",
    "pook",
    "pyinstrument",
    "licensecheck",
    "pip-licenses",
    "briefcase",
]

[tool.deptry]
extend_exclude = ["scripts"]
known_first_party = ["stonks_overwatch"]

[tool.deptry.per_rule_ignores]
# django-extensions are not actively used in the codebase, but it can be usefult
# django-node-assets is used to simplify the management of NPM dependencies
DEP002 = ["django-extensions", "django-node-assets"]
