[project]
name = "stonks-overwatch"
version = "0.3.1.dev0"
description = "Stonks Overwatch"
authors = [{name = "Carlos Tasada", email = "carlos.tasada@gmail.com"}]
license = "MIT"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "degiro-connector[quotecast] >= 3.0.35",
    "django >= 6.0.1",
    "pycountry >= 24.6.1",
    "currency-symbols >= 2.0.4",
    "polars >=1.37.1",
    "requests-cache >= 1.3.0",
    "django-extensions >= 4.1.0",
    "currencyconverter >= 0.18.14",
    "django-node-assets >= 0.9.15",
    "apscheduler >= 3.11.2",
    "tzlocal >= 5.3.1",
    "python-bitvavo-api >= 1.4.3",
    "yfinance >= 1.1.0",
    "iso10383 >=2025.2.10",
    "requests >=2.32.4",
    "ibind[oauth] >=0.1.22",
    "cryptography >=46.0.4",
    "packaging >=25.0",
    "python-dateutil >=2.9.0.post0",
    "markdown >=3.9",
    "pyotp >= 2.9.0",
]

[project.optional-dependencies]
# Keep in sync with `tool.briefcase.app.stonks-overwatch.requires`
briefcase = [
    "toga >=0.5.3",
    "asgiref >= 3.11.0",
]

[tool.poetry.dependencies]
python = ">=3.13,<3.14"

[build-system]
requires = ["poetry-core>=2.3.1,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ruff = "^0.12.12"
pytest = "^8.4.2"
pytest-cov = "^6.3.0"
pytest-django = "^4.11.1"
pook = "^2.1.4"
pyinstrument = "^5.1.2"
licensecheck = "^2025.1.0"
pip-licenses = "^5.5.1"
briefcase = "^0.3.26"
deptry = "^0.23.0"
pre-commit = "^4.5.1"
bandit = "^1.9.3"
pymarkdownlnt = "^0.9.35"
pytest-asyncio = "^1.3.0"

[tool.poetry]
include = [
    { path = "Makefile", format = ["sdist", "wheel"] },
    { path = "CHANGELOG.md", format = ["sdist", "wheel"] },
    { path = "LICENSE", format = ["sdist", "wheel"] },
    { path = "THIRD_PARTY_LICENSES.txt", format = ["sdist", "wheel"] },
    { path = "package.json", format = ["sdist", "wheel"] },
    { path = "package-lock.json", format = ["sdist", "wheel"] },
    { path = "Dockerfile", format = ["sdist", "wheel"] },
    { path = "docker-compose.yml", format = ["sdist", "wheel"] },
    { path = "config/config.json.template", format = ["sdist", "wheel"] },
    { path = "src/stonks_overwatch/**/*.*", format = ["sdist", "wheel"] },
    { path = "src/icons/**/*.*", format = ["sdist", "wheel"] },
    { path = "src/scripts/**/*.*", format = ["sdist", "wheel"] },
    { path = "src/*.py", format = ["sdist", "wheel"] },
    { path = "src/*.sh", format = ["sdist", "wheel"] },
]

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.10.0"

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

# Same as Black.
line-length = 120
indent-width = 4
target-version = "py313"

[tool.ruff.lint]
select = [
    "C",   # pylint convention
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "N",   # PEP8 naming conventions
    "W",   # pylint warning
    "DTZ", # flake8-datetimez (prevent naive datetime usage)
]
ignore = []

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.per-file-ignores]
# Ignore timezone-awareness rules in tests and scripts (they don't interact with Django models)
"tests/**/*.py" = ["DTZ"]
"scripts/**/*.py" = ["DTZ"]

[tool.ruff.lint.isort]
order-by-type = true
relative-imports-order = "closest-to-furthest"
extra-standard-library = ["typing"]
lines-after-imports = -1
lines-between-types = 0
combine-as-imports = true
force-single-line = false
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder", "testing"]

[tool.ruff.lint.isort.sections]
testing = ["django.test", "pytest", "pook", "unittest"]

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"
# Like Black, indent with spaces, rather than tabs.
indent-style = "space"
# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false
# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

# Enable auto-formatting of code examples in docstrings. Markdown,
# reStructuredText code/literal blocks and doctests are all supported.
#
# This is currently disabled by default, but it is planned for this
# to be opt-out in the future.
docstring-code-format = false

# Set the line length limit used when formatting code snippets in
# docstrings.
#
# This only has an effect when the `docstring-code-format` setting is
# enabled.
docstring-code-line-length = "dynamic"

[tool.coverage.run]
source = ['src/stonks_overwatch']

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "src.stonks_overwatch.settings"
pythonpath = [".", "src/stonks_overwatch", "src"]
testpaths = ["tests"]
python_files = [
    "test_*.py"
]
addopts = [
    '--import-mode=importlib',
]

[tool.briefcase]
project_name = "Stonks Overwatch"
bundle = "com.caribay"
url = "https://github.com/ctasada/stonks-overwatch"
license = {file = "LICENSE"}
author = "Carlos Tasada"
author_email = "ctasada@gmail.com"
# revision is injected during the build process: "git rev-parse --short HEAD"

[tool.briefcase.app.stonks-overwatch]
formal_name = "Stonks Overwatch"
description = "Stocks Porfolio Tracker"
long_description = """Stonks Overwatch is a new Stocks Dashboard.

Why do we need yet another dashboard? I have been a DeGiro user for many years, and the more active I was,
the more frustrated I became with the lack of any decent dashboard to overview my investments.

After trying different options (I will omit names), I couldn't find any that was really covering my needs, or
that I could trust.

Stonks Overwatch runs locally and doesn't share your data with anyone. Your data is yours
"""
icon = "src/icons/stonks_overwatch"
sources = [
    "src/stonks_overwatch",
]
test_sources = [
    "tests",
]
# Keep in sync with `project.optional-dependencies.briefcase`
requires = [
    "toga >=0.5.3",
    "std-nslog >=1.0.3",
    "asgiref >= 3.11.0",
]
test_requires = [ ]
requirement_installer_args = ["--find-links", "./wheels"]

[tool.briefcase.app.stonks-overwatch.macOS]
universal_build = false

[tool.briefcase.app.stonks-overwatch.linux.flatpak]
# Toga's WebView only supports properly GTK, for with we need to install Gnome
# This avoids the need to manually add extensions to the manifest.
flatpak_runtime = "org.gnome.Platform"
flatpak_runtime_version = "49"
flatpak_sdk = "org.gnome.Sdk"
# Grant access to XDG directories for storing application data
flatpak_finish_args = [
    "--filesystem=xdg-data/stonks-overwatch:create",
    "--filesystem=xdg-config/stonks-overwatch:create",
    "--filesystem=xdg-cache/stonks-overwatch:create",
]

[tool.briefcase.app.stonks-overwatch.windows]
use_full_install_path = false

[tool.pip-licenses]
format = "plain-vertical"
with-license-file = true
no-license-path = true
output-file = "THIRD_PARTY_LICENSES.txt"
order = "name"
# Ignore licenses for packages that are not distributed with the project.
# The development dependencies need to be manually maintained.
ignore-packages = [
    "ruff",
    "pytest",
    "pytest-cov",
    "pytest-django",
    "pook",
    "pyinstrument",
    "licensecheck",
    "pip-licenses",
    "briefcase",
]

[tool.deptry]
extend_exclude = ["scripts"]
known_first_party = ["stonks_overwatch"]

[tool.deptry.per_rule_ignores]
# django-extensions are not actively used in the codebase, but it can be useful
# django-node-assets is used to simplify the management of NPM dependencies
DEP002 = ["django-extensions", "django-node-assets"]

[tool.bandit]
exclude_dirs = ["build", ".venv"]
#tests = ["B201", "B301"]
#skips = ["B101", "B601"]

[tool.pymarkdown]
plugins.md007.indent = 4
plugins.md013.enabled = false
plugins.md024.siblings_only = true
plugins.md026.enabled = false
plugins.md036.enabled = false
